<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hyre</string>
    <string name="applicant">APPLICANT</string>
    <string name="recruiter">RECRUITER</string>
    <string name="applicant_welcome">Welcome to Applicant Dashboard</string>
    <string name="recruiter_welcome">Welcome to Recruiter Dashboard</string>
    <string name="login">Login</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="back">Back</string>
    <string name="applicant_dashboard">Applicant Dashboard</string>
    <string name="recruiter_dashboard">Recruiter Dashboard</string>
    <string name="home">Home</string>
    <string name="mail">Mail</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="search">Search...</string>
    <string name="see_attached_file">See attached file</string>
    <string name="read_more">Read more...</string>
    <string name="settings">Settings</string>
    <string name="discussion">Discussion</string>
    <string name="create_post">Create Post</string>
    <string name="post">Post</string>
    <string name="post_title">Title</string>
    <string name="description">Description</string>
    <string name="attachments">Attachments</string>
    <string name="attach_file">Attach File</string>
    <string name="attach_image">Attach Image</string>
    <string name="image_preview">Image Preview</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="personal_info">Personal Information</string>
    <string name="phone">Phone Number</string>
    <string name="location">Location</string>
    <string name="bio">Bio</string>
    <string name="save">Save</string>
    <string name="change_photo">Change Photo</string>
    <string name="full_name">Full Name</string>
    <string name="messages">Messages</string>
    <string name="type_message">Type a message...</string>
    <string name="send_message">Send Message</string>
</resources>